[gd_scene load_steps=7 format=3 uid="uid://bobb02e3lacn3"]

[ext_resource type="Texture2D" uid="uid://71tdct4p4801" path="res://assets/pause.PNG" id="2_v3rix"]
[ext_resource type="PackedScene" uid="uid://cn0lvuxmmatic" path="res://scenes/hero_shop.tscn" id="3_dt2dr"]
[ext_resource type="Script" path="res://scripts/zoom_indicator.gd" id="3_mwhwh"]
[ext_resource type="Script" path="res://scripts/pause_button.gd" id="3_s6c2b"]
[ext_resource type="Script" path="res://scripts/wave_display.gd" id="5_a01hr"]
[ext_resource type="Script" path="res://scripts/hero_panel.gd" id="6_h3f4a"]

[node name="ui" type="CanvasLayer" groups=["ui"]]

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = -303.0
offset_right = 735.0
offset_bottom = 15.0
grow_vertical = 2

[node name="ZoomIndicator" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = 215.0
offset_right = 86.0
offset_bottom = 238.0
text = "Zoom"
script = ExtResource("3_mwhwh")

[node name="PauseButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 846.0
offset_top = 146.0
offset_right = 919.0
offset_bottom = 210.0
texture_normal = ExtResource("2_v3rix")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_s6c2b")

[node name="GlobalLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 43.0
offset_top = 177.0
offset_right = 84.0
offset_bottom = 200.0
text = "Gold:"

[node name="BarrierButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 109.0
offset_right = 135.0
offset_bottom = 140.0
text = "Place Barriers"

[node name="WaveDisplay" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 229.0
offset_top = 66.0
offset_right = 346.0
offset_bottom = 233.0
script = ExtResource("5_a01hr")

[node name="Panel" type="Panel" parent="Control/WaveDisplay"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 7.03
anchor_top = -0.407
anchor_right = 7.03
anchor_bottom = -0.407
offset_left = -68.51
offset_top = -0.0309982
offset_right = 68.49
offset_bottom = 166.969

[node name="WaveLabel" type="Label" parent="Control/WaveDisplay"]
visible = false
layout_mode = 0
offset_left = 42.0
offset_top = 13.0
offset_right = 82.0
offset_bottom = 36.0

[node name="CountdownLabel" type="Label" parent="Control/WaveDisplay"]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 58.0
offset_right = 68.0
offset_bottom = 81.0

[node name="NextWaveButton" type="Button" parent="Control/WaveDisplay"]
visible = false
layout_mode = 0
offset_left = 770.0
offset_top = 52.0
offset_right = 867.0
offset_bottom = 83.0
text = "start waves
"

[node name="HeroShop" parent="." groups=["yu"] instance=ExtResource("3_dt2dr")]
anchors_preset = -1
anchor_left = 0.979
anchor_top = 0.946
anchor_right = 0.979
anchor_bottom = 0.946
offset_left = -709.808
offset_top = -172.008
offset_right = 0.192017
offset_bottom = -0.00799561
grow_horizontal = 0
grow_vertical = 0

[node name="GameMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 397.0
offset_top = 42.0
offset_right = 437.0
offset_bottom = 118.0

[node name="MenuPanel" type="Panel" parent="GameMenu"]
visible = false
layout_mode = 0
offset_left = 738.0
offset_top = 20.0
offset_right = 925.0
offset_bottom = 212.0

[node name="MenuTitle" type="Label" parent="GameMenu/MenuPanel"]
layout_mode = 0
offset_left = 51.0
offset_top = 6.0
offset_right = 107.0
offset_bottom = 29.0
text = "menu"

[node name="ButtonContainer" type="VBoxContainer" parent="GameMenu/MenuPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 37.0
offset_right = 173.0
offset_bottom = 194.0

[node name="ResumeButton" type="Button" parent="GameMenu/MenuPanel/ButtonContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="GameMenu/MenuPanel/ButtonContainer"]
layout_mode = 2
text = "Restart
"

[node name="QuitButton" type="Button" parent="GameMenu/MenuPanel/ButtonContainer"]
layout_mode = 2
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="GameMenu/MenuPanel"]
layout_mode = 0
offset_top = -1.0
offset_right = 183.0
offset_bottom = 188.0

[node name="SettingsContainer" type="VBoxContainer" parent="GameMenu"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 65.0
offset_right = 193.0
offset_bottom = 251.0

[node name="MusicVolumeSlider" type="HSlider" parent="GameMenu/SettingsContainer"]
layout_mode = 2

[node name="HSlider2" type="HSlider" parent="GameMenu/SettingsContainer"]
layout_mode = 2

[node name="HeroPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_h3f4a")

[connection signal="pressed" from="Control/WaveDisplay/NextWaveButton" to="Control/WaveDisplay" method="_on_next_wave_button_pressed"]
